// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner Plain background renders correctly 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--plain-background ecl-banner--m ecl-banner--centered"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Headline sed elit lorem. Donec dictum.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Pellentesque tempor tincidunt quam, finibus vulputate eros iaculis pharetra orci arcu, dictum maximus arcu pellentesque eget. Cras massa nunc.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              aria-label="CTA link"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner Plain background renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--plain-background ecl-banner--m ecl-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Headline sed elit lorem. Donec dictum.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Pellentesque tempor tincidunt quam, finibus vulputate eros iaculis pharetra orci arcu, dictum maximus arcu pellentesque eget. Cras massa nunc.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              aria-label="CTA link"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner Plain background renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--plain-background ecl-banner--m ecl-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Headline sed elit lorem. Donec dictum.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Pellentesque tempor tincidunt quam, finibus vulputate eros iaculis pharetra orci arcu, dictum maximus arcu pellentesque eget. Cras massa nunc.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              aria-label="CTA link"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner image - image overlay renders correctly 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--image-overlay ecl-banner--m ecl-banner--centered"
  >
    <div
      class="ecl-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-banner__credit"
    >
      © Copyright or credit
    </div>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Headline sed elit lorem. Donec dictum.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Pellentesque tempor tincidunt quam, finibus vulputate eros iaculis pharetra orci arcu, dictum maximus arcu pellentesque eget. Cras massa nunc.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              aria-label="CTA link"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner image - text highlight renders correctly 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--text-highlight ecl-banner--m ecl-banner--centered"
  >
    <div
      class="ecl-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-banner__credit"
    >
      © Copyright or credit
    </div>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Headline sed elit lorem. Donec dictum.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Pellentesque tempor tincidunt quam, finibus vulputate eros iaculis pharetra orci arcu, dictum maximus arcu pellentesque eget. Cras massa nunc.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              aria-label="CTA link"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner image - text-box renders correctly 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--text-box ecl-banner--m ecl-banner--centered"
  >
    <div
      class="ecl-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-banner__credit"
    >
      © Copyright or credit
    </div>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Headline sed elit lorem. Donec dictum.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Pellentesque tempor tincidunt quam, finibus vulputate eros iaculis pharetra orci arcu, dictum maximus arcu pellentesque eget. Cras massa nunc.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              aria-label="CTA link"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner image renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--text-box ecl-banner--m ecl-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-banner__credit"
    >
      © Copyright or credit
    </div>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Headline sed elit lorem. Donec dictum.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Pellentesque tempor tincidunt quam, finibus vulputate eros iaculis pharetra orci arcu, dictum maximus arcu pellentesque eget. Cras massa nunc.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              aria-label="CTA link"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner image renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--text-box ecl-banner--m ecl-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-banner__credit"
    >
      © Copyright or credit
    </div>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Headline sed elit lorem. Donec dictum.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Pellentesque tempor tincidunt quam, finibus vulputate eros iaculis pharetra orci arcu, dictum maximus arcu pellentesque eget. Cras massa nunc.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              aria-label="CTA link"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;
